Recent Changes for wxPython
=====================================================================

2.7.1.2
-------
* 20-Oct-2006

Fixed a bug in the MaskedEdit controls caused by conflicting IsEmpty
methods. 

Patch #1579280: Some mimetype optimizations on unix-like systems.

wxMac: Several wx.webkit.WebKitCtrl enhancements/fixes, including:

    - new methods for increasing/decreasing text size, getting
      selection, getting/setting scroll position, printing, enabling
      editing, and running JavaScripts on the page.

    - added new event (wx.webkit.WebKitBeforeLoadEvent) for catching, and
      possibly vetoing, load events before they occur.

    - wx.webkit.WebKitCtrl now fires mouse events for certain events
      that it was eating before. This improves wxSplitterWindow
      resizing behavior.

    - refactoring of the sizing logic to move the Cocoa view.  Tested
      with splitter windows, panels, notebooks and all position
      correctly with this.






2.7.1.1
-------
* 18-Oct-2006

The following deprecated items have been removed:

    * wx.Bitmap SetQuality and GetQuality methods

    * The wx.GetNumberFromUser function

    * wx.EVT_LIST_GET_INFO and wx.EVT_LIST_SET_INFO

    * wx.BookCtrlSizer and wx.NotebookSizer

    * The PostScript-specific methods of wx.PrintData

    * wx.PrintDialogData SetSetupDialog and GetSetupDialog methods

    * wx.FontMapper SetConfig method

    * wx.html.HtmlSearchStatus.GetContentsItem method

    * wx.html.HtmlHelpData.GetContents, GetContentsCnt, GetIndex, and
      GetIndexCnt methods


wx.EventLoop is now implemented for wxMac.

Added wxPython wrappers for the new wx.Treebook and wx.Toolbook
classes. 

wx.DC.BeginDrawing and EndDrawing have been deprecated in the C++
code, so since they never really did anything before they are now just
empty stubs in wxPython.

Solved a problem that has been around for a very long time in how C++
methods are virtualized for overriding in derived Python classes.