@@ -3,7 +3,7 @@ Recent Changes for wxPython
 
 2.7.1.2
 -------
-* 20-Oct-2006
+* 21-Oct-2006
 
 Fixed a bug in the MaskedEdit controls caused by conflicting IsEmpty
 methods. 
@@ -27,6 +27,9 @@ wxMac: Several wx.webkit.WebKitCtrl enhancements/fixes, including:
       with splitter windows, panels, notebooks and all position
       correctly with this.
 
+Some improvements to the drawing code in CustomTreeCtrl.
+
+Fixed refcount leak in wx.Window.GetChildren.
 
 
 
